--- a/ArtHub/MainStyle.css
+++ b/ArtHub/MainStyle.css
@@ -11,9 +11,6 @@ body {
 }
 
 /*-------HEADER-------*/
-/*-------HEADER-------*/
-/*-------HEADER-------*/
-
 header {
   background-color: #fff;
   padding: 15px 20px;
@@ -30,10 +27,16 @@ header {
   justify-content: space-between;
 }
 
+.nav-links li a img {
+  border-radius: 50% !important; /* Обязательное скругление аватарки */
+  width: 40px !important; /* Уменьшаем аватарку */
+  height: 40px !important; /* Уменьшаем аватарку */
+  object-fit: cover !important; /* Обеспечиваем правильное отображение картинки */
+}
+
 .logo img {
   width: 200px;
   height: auto;
-  margin-left: 160%;
 }
 
 .nav-links {
@@ -44,6 +47,12 @@ header {
   display: flex;
   gap: 20px;
   margin-left: 65%;
+  align-items: center; /* Центрирование по вертикали */
+}
+
+.nav-links li {
+  display: flex;
+  align-items: center; /* Центрирование по вертикали */
 }
 
 .nav-links li a {
@@ -68,35 +77,6 @@ header {
 
 .nav-links li a:hover::after {
   transform: scaleX(1);
-}
-
-.profile-header {
-  background: #f8f9fa;
-  padding: 2rem;
-  border-radius: 15px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
-.avatar {
-  width: 150px;
-  height: 150px;
-  border: 3px solid #12a73e;
-  object-fit: cover;
-}
-
-.profile-info p {
-  font-size: 1.1rem;
-  margin: 0.5rem 0;
-  color: #555;
-}
-
-.profile-icon img {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  object-fit: cover;
-  box-shadow: 0 0 0 4px #12a73e;
-  margin-left: 370%;
 }
 
 .hero {
